--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">QSTMovieApp</string>
+    <string name="movie_sort">Sort</string>
+    <string name="title_movies">Movies</string>
+    <string name="movie_detail">Detail</string>
+    <string name="movie_short_description">Short description</string>
+    <string name="watch_trailer">Watch trailer</string>
+    <string name="remove_from_watchlist">Remove from watchlist</string>
+    <string name="add_to_watch_list">Add to watch list</string>
+    <string name="sort_by_title">Title</string>
+    <string name="sort_by_released_date">Released Date</string>
+    <string name="cancel">Cancel</string>
+    <string name="on_my_watchlist">On my watchlist</string>
 </resources>
